--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fun</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <a href="#">Contact me</a>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="Said Ali" />
+        <title>Cool animations</title>
+        <link rel="stylesheet" href="css/styles.css" />
+    </head>
+    <body>
+        <a href="#">Contact me</a>
+    </body>
 </html>
